Added fix for junit and surefire plugin to run test cases